Updated sign up page

--- a/frontend/src/main/resources/templates/fragment/feed-tweets.html
+++ b/frontend/src/main/resources/templates/fragment/feed-tweets.html
@@ -70,7 +70,7 @@
                 <div class="name-field">
 
                     <a th:href="@{'/' + ${t.user_id} }">
-                        <span class="name" th:text="${t.firstName} + ' ' + ${t.lastName}"></span>
+                        <span class="name" th:text="${t.name}"></span>
                         <span class="grey-text" th:text="' @' + ${t.userName}"></span>
                     </a>
 
@@ -132,7 +132,7 @@
             <div class="retweet-box">
                 <a th:href="@{'/' + ${t.user_id} }">
                     <img class="user-retweet-icon" th:src="@{'/assets/gray-retweet.svg'}">
-                    <span class="retweeted-text" th:text="${t.firstName} + ' ' + ${t.lastName} + ' Retweeted' "></span>
+                    <span class="retweeted-text" th:text="${t.name} + ' Retweeted' "></span>
                 </a>
             </div>
 
@@ -142,7 +142,7 @@
 
             <div class="tweetbox-content">
 
-                <div th:if="${t.newTweet.user_id == currentUser}" class="tweet-options-menu-retweet">
+                <div th:if="${t.user_id == currentUser}" class="tweet-options-menu-retweet">
 
                     <button onclick="popUp(event)" class="caret-button">
                         <img class="caret-img" th:src="@{'/assets/down-arrow-grey.svg'}" />
@@ -178,7 +178,7 @@
                             </button>
                         </form>
 
-                        <form th:action="@{'/deleteRetweet/' + ${t.newTweet.tweet_id} }" method="get">
+                        <form th:action="@{'/deleteRetweet/' + ${t.tweet_id} }" method="get">
                             <button class="caret-menu-button">
                                 <span class="caret-menu-button-text">Delete Tweet</span>
                             </button>
@@ -198,7 +198,7 @@
 
                 <div class="name-field-retweet">
                     <a th:href="@{'/' + ${t.newTweet.user_id} }">
-                        <span class="name" th:text="${t.newTweet.firstName} + ' ' + ${t.newTweet.lastName}"></span>
+                        <span class="name" th:text="${t.newTweet.name}"></span>
                         <span class="grey-text" th:text="' @' + ${t.newTweet.userName}"></span>
                     </a>
                     <span class="grey-text">⋅</span>
