--- a/frontend/src/main/resources/templates/home.html
+++ b/frontend/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
                         <div class="profile-box-bottom-box">
                             <div class="name-box">
                                 <a th:href="@{'/' + ${profile.user_id} }">
-                                    <span class="profile-name" th:text="${profile.firstName} + ' ' + ${profile.lastName}"></span><br>
+                                    <span class="profile-name" th:text="${profile.name}"></span><br>
                                 </a>
 
                                 <div class="handle-at-username">
