--- a/frontend/src/main/resources/templates/profilefollow.html
+++ b/frontend/src/main/resources/templates/profilefollow.html
@@ -49,7 +49,7 @@
                                         </div>
                                         <div class="name-box-2">
                                             <a th:href="@{'/' + ${u.user_id} }">
-                                                <span th:text=" ${u.firstName} + ' ' + ${u.lastName}" class="profile-name-2"></span><br>
+                                                <span th:text=" ${u.name}" class="profile-name-2"></span><br>
                                             </a>
 
 
