--- a/frontend/src/main/resources/static/css/style.css
+++ b/frontend/src/main/resources/static/css/style.css
@@ -19,6 +19,29 @@ button:focus {
     outline: none !important;
 }
 
+/************ NAVBAR SIGNUP ************/
+
+.navbar-home-icon{
+    height: 2em;
+}
+
+
+
+/************ NAVBAR SIGNUP ************/
+
+.navbarGradient-signup {
+    background-image: linear-gradient(to right, #48A0EB, #68CA98);
+    opacity: 1.0;
+}
+
+.navbar-shadow-line {
+    border-bottom: 0.07em solid rgba(0, 0, 0, .2);
+}
+
+.bird-signup {
+    color: white;
+    font-size: 1em;
+}
 
 
 /************ NAVBAR ************/
@@ -30,6 +53,9 @@ button:focus {
 
 .navbar {
     min-height: 46px;
+}
+
+.navbar-shadow {
     -webkit-box-shadow: 0px 1px 1px 0px rgba(17, 17, 17, 0.32);
     -moz-box-shadow: 0px 1px 1px 0px rgba(17, 17, 17, 0.32);
     box-shadow: 0px 1px 1px 0px rgba(17, 17, 17, 0.32);
@@ -59,6 +85,83 @@ button:focus {
     width: 1.5em;
     border-radius: 50%;
 }
+
+.bird {
+    color: #1DA1F2;
+    font-size: 1em;
+}
+
+
+/************ SIGNUP PAGE ************/
+
+.form-container {
+    margin-top: 2.2em;
+    padding-left: 2.45em;
+    padding-right: 2.45em;
+}
+
+.join-twitter-header {
+    font-weight: 600;
+    font-size: 1.75em;
+}
+
+.sign-up-button {
+    margin-top: 1.55em;
+    background-color: #48A0EB;
+    width: 100%;
+    height: 3.15em;
+    border: 0;
+    border-radius: 2em;
+    cursor: pointer;
+}
+
+.sign-up-button-text {
+    font-weight: 600;
+    font-size: 1.1em;
+    color: white;
+}
+
+.disclaimer-small-text {
+    font-size: 0.75em;
+    color: #4F6476;
+    font-weight: 300;
+}
+
+.custom-form {
+    margin-top: 1.2em;
+}
+
+.form-spacing {
+    margin-top: 1.5em;
+}
+
+.custom-form-input {
+    width: 100%;
+    height: 2.7em;
+    border-radius: 0.2em;
+    border: 0.08em #E3E8ED solid;
+    font-weight: 700;
+    padding-left: 0.6em;
+    padding-right: 0.6em;
+    font-size: 1.1em;
+}
+
+.custom-form-input::placeholder {
+    color: #b9bec1;
+    opacity: 1;
+}
+
+.disclaimer-text-container {
+    line-height: 0.9em;
+    margin-top: 1em;
+}
+
+.linkify {
+    color: #48A0EB !important;
+}
+
+
+
 
 
 
@@ -270,7 +373,8 @@ button:focus {
 }
 
 .hamburger-menu-icon {
-    width: 0.35em;
+    width: 0.28em;
+    height: 1em;
 }
 
 .follow-button-area {
@@ -413,9 +517,6 @@ button:focus {
     content: "Unfollow"
 }
 
-
-
-
 .follow-button-checked:hover:before {
     content: "Unfollow"
 }
@@ -425,8 +526,9 @@ button:focus {
 }
 
 .fl-box-hamburger-menu-icon {
-    padding-top: 0.1em;
-    height: 1em;
+    height: 1.1em;
+    width: 0.28em;
+    margin-top: 0.2em;
 }
 
 .single-follow-box {
@@ -434,12 +536,6 @@ button:focus {
     padding-left: 0.35em;
     padding-right: 0.35em;
 }
-
-
-
-
-
-
 
 
 
