--- a/frontend/src/main/resources/templates/home.html
+++ b/frontend/src/main/resources/templates/home.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <!------------ FEED ------------->
-                <div class="col-6">
+                <div class="col-6" style="padding-left: 0.64em">
 
                     <!--------- POST NEW TWEET --------->
                     <div class="post-tweet-box">
@@ -78,7 +78,7 @@
                 </div>
 
                 <!--------- WHO TO FOLLOW BOX --------->
-                <div class="col-3">
+                <div class="col-3" style="padding-left: 0.06em">
                     <div class="follow-box"></div>
                 </div>
 
