--- a/frontend/src/main/resources/templates/fragment/menu.html
+++ b/frontend/src/main/resources/templates/fragment/menu.html
@@ -4,7 +4,7 @@
 
             <!-- Home Button -->
             <div class="navbar-button-container">
-                <a href="http://www.google.com" class="home-button">
+                <a th:href="@{'/home'}" class="home-button">
                     <div>
                         <img class="navbar-home-icon" th:src="@{'/assets/home-filled-blue-3.svg'}">
                         <span class="navbar-home-text">Home</span>
@@ -14,7 +14,7 @@
 
             <!-- Twitter Bird -->
             <div class="navbar-brand">
-                <a th:href="@{/home}"><i class="fab fa-twitter bird"></i></a>
+                <a th:href="@{/}"><i class="fab fa-twitter bird"></i></a>
             </div>
 
             <!-- Navbar Right Box -->
