--- a/frontend/src/main/resources/templates/profiletweets.html
+++ b/frontend/src/main/resources/templates/profiletweets.html
@@ -26,7 +26,7 @@
 
                 </div>
 
-                <div class="col-3" style="padding-left: 0.3em">
+                <div class="col-3" style="padding-left: 0;">
                     <!--------- FOLLOW BOX --------->
                     <div class="follow-box"></div>
                 </div>
