--- a/frontend/src/main/resources/templates/fragment/menu.html
+++ b/frontend/src/main/resources/templates/fragment/menu.html
@@ -46,8 +46,8 @@
                             </button>
                         </form>
                         <hr class="navbar-menu-separator">
-                        <form>
-                            <button class="navbar-caret-menu-button">
+                        <form th:action="@{'/profileaccount'}">
+                            <button class="navbar-caret-menu-button" type="submit">
                                 <span class="navbar-caret-menu-button-text">Edit profile</span>
                             </button>
                         </form>
