--- a/frontend/src/main/resources/static/css/style.css
+++ b/frontend/src/main/resources/static/css/style.css
@@ -175,7 +175,7 @@ button:focus {
 .navbar-arrows {
     float: right;
     position: relative;
-    margin-top: -1em;
+    margin-top: -0.95em;
     margin-right: 2em;
 }
 
@@ -536,6 +536,7 @@ button:focus {
     font-size: 0.84em;
     font-weight: 700;
     margin-right: 1.2em;
+    cursor: pointer;
 }
 
 .follow-button {
@@ -1123,4 +1124,190 @@ button:focus {
     color: #E0245E;
     padding-top: 0.3em;
     padding-left: 0.1em;
+}
+
+
+/************ SETTINGS PAGE ************/
+
+.left-area-container {
+    position: absolute;
+    right: 0.07em;
+}
+
+/* Profile Box */
+.settings-profile-box {
+    height: 9.64em;
+    width: 18em;
+}
+
+.settings-profile-box-pic {
+    margin-top: 3.9em;
+    margin-left: 0.5em;
+    position: absolute;
+    width: 4.5em;
+    height: 4.5em;
+    border-radius: 50%;
+    border: 0.18em solid #ffffff;
+}
+
+.settings-name-box {
+    margin-left: 5.5em;
+    padding-top: 0.8em;
+    line-height: 1.15em;
+    margin-bottom: 0.5em;
+}
+
+.settings-profile-name {
+    font-size: 1.05em;
+    font-weight: bold;
+}
+
+.settings-handle-name {
+    color: #657786;
+    font-size: 0.84em;
+    font-weight: 300;
+}
+
+
+/* Settings Panel Box */
+.settings-panel-box {
+    height: 9.64em;
+    width: 18em;
+    margin-top: 0.8em;
+}
+
+.settings-panel-box-button {
+    padding-left: 0.75em;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    height: 2.25em;
+    background-color: white;
+    border: none;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.settings-panel-box-button:hover {
+    background-color: #F5F8FA;
+    text-decoration: none;
+}
+
+.settings-panel-box-button:hover span {
+    color: #1DA1F2 !important;
+    text-decoration: none;
+}
+
+.settings-button-text-bold {
+    font-size: 0.85em;
+    font-weight: 600;
+    text-decoration: none;
+    color: black !important;
+}
+
+.settings-button-text-light {
+    font-size: 0.85em;
+    font-weight: 300;
+    color: #66757f;
+    text-decoration: none;
+}
+
+.settings-button-caret {
+    height: 0.68em;
+    position: absolute;
+    right: 0.85em;
+}
+
+.divider {
+    margin-top: 0;
+    margin-bottom: 0;
+    border-color: transparent;
+}
+
+.middle-area-container {
+    position: absolute;
+    left: 0.68em;
+}
+
+.header-area {
+    height: 2.85em;
+    width: 36.77em;
+    display: table;
+    padding-left: 1em;
+    background-color: white;
+}
+
+.settings-page-header {
+    font-size: 1.4em;
+    font-weight: 600;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.content-area {
+    padding-top: 0.7em;
+    height: 25em;
+    width: 36.77em;
+    background-color: white;
+    padding-left: 4.2em;
+}
+
+.deactivate-area {
+    width: 36.77em;
+    background-color: white;
+    height: 4.19em;
+    padding-left: 9.5em;
+    padding-top: 1em;
+}
+
+.deactivate-text {
+    color: #1c94e0;
+    font-size: 0.85em;
+    font-weight: 300;
+}
+
+.form-info-text {
+    font-size: 0.85em;
+    font-weight: 400;
+}
+
+.form-detail-text {
+    font-size: 0.7em;
+    color: #657786;
+    font-weight: 300;
+}
+
+.custom-settings-input {
+    font-size: 0.84em;
+    font-weight: 400;
+    height: 2.21em;
+    width: 16.8em;
+    padding-left: 0.3em;
+    border: 0.1em solid #E6ECF0;
+    border-radius: 0.2em;
+}
+
+.save-changes-button {
+    font-size: 0.9em;
+    font-weight: 600;
+    border-radius: 4em;
+    width: 8.8em;
+    height: 2.35em;
+    color: white;
+    border: none;
+    background-color: #4AB3F4;
+    cursor: pointer;
+}
+
+.second-column {
+    padding-left: 1.2em;
+}
+
+.table-row-spacing {
+    height: 1em;
+}
+
+.linkify {
+    color: #48A0EB !important;
 }
