--- a/frontend/src/main/resources/templates/editprofile.html
+++ b/frontend/src/main/resources/templates/editprofile.html
@@ -4,7 +4,7 @@
     <title>Login</title>
     <head th:replace="fragment/header :: head"></head>
 
-    <body style="background-color: white">
+    <body>
 
         <div th:replace="fragment/menu :: div"></div>
 
@@ -12,11 +12,11 @@
 
             <div class="row justify-content-center">
                 <div class="col-5 form-container">
-                    <span class="join-twitter-header">Join Twitter today.</span>
+                    <span class="join-twitter-header">Account</span>
 
-                    <form class="custom-form" th:action="@{/register}" method="post" th:object="${user}">
+                    <form class="custom-form" th:action="@{/save}" method="post" th:object="${profile}" enctype="multipart/form-data">
 
-                        <input th:field="*{name}" name="name" class="custom-form-input" type="text" placeholder="Full name">
+                        <input th:field="*{name}" name="name" class="custom-form-input" type="text" placeholder="Full Name">
                         <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
                         <br>
 
@@ -32,43 +32,39 @@
                         <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</div>
                         <br>
 
-                        <button class="sign-up-button" type="submit">
-                            <span class="sign-up-button-text">Sign up</span>
+                        <input type="text" th:field="*{phone}" name="phone" class="custom-form-input form-spacing" placeholder="Phone">
+                        <div th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">Phone Error</div>
+                        <br>
+
+                        <input type="text" th:field="*{bio}" name="bio" class="custom-form-input form-spacing" placeholder="Bio">
+                        <div th:if="${#fields.hasErrors('bio')}" th:errors="*{bio}">Bio Error</div>
+                        <br>
+
+                        <input type="text" th:field="*{link}" name="link" class="custom-form-input form-spacing" placeholder="Link">
+                        <div th:if="${#fields.hasErrors('link')}" th:errors="*{link}">Link Error</div>
+                        <br>
+
+                        <input accept="image/gif,image/jpeg,image/jpg,image/png" type="file" name="bannerImageNameNew" class="custom-form-input form-spacing">
+                        <br>
+
+                        <input accept="image/gif,image/jpeg,image/jpg,image/png" type="file" name="profileImageNameNew" class="custom-form-input form-spacing">
+                        <br>
+
+                        <select name="location">
+                            <option th:each="location : ${locations}" th:text="${location}" th:value="${location}"></option>
+                        </select>
+                        <br>
+                        <button type="submit">
+                            <span>Save changes</span>
                         </button>
                     </form>
 
-                    <div class="disclaimer-text-container">
-                        <span class="disclaimer-small-text">
-                            By signing up, you agree to the <a href="#" class="linkify">Terms of Service</a> and <a href="#" class="linkify">Privacy Policy</a>,
-                            including <a href="#" class="linkify">Cookie Use</a>. Others will be able to find you by searching for
-                            your email address or phone number when provided.
-                        </span>
-                    </div>
+                    <form th:action="@{'/deleteaccount'}" method="post">
+                        <button type="submit">Delete account</button>
+                    </form>
+
                 </div>
             </div>
-
-
-            <!--<form th:action="@{/register}" method="post" th:object="${user}">
-
-
-                <div class="form-group">
-                    <input type="text" th:field="*{bio}"  name="bio" class="form-control" placeholder="Bio">
-                    <div th:if="${#fields.hasErrors('bio')}" th:errors="*{bio}">Bio Error</div>
-                </div>
-
-                <div class="form-group">
-                    <input type="text" th:field="*{link}" name="link" class="form-control" placeholder="Link">
-                    <div th:if="${#fields.hasErrors('link')}" th:errors="*{link}">Link Error</div>
-                </div>
-
-                <div class="form-group">
-                    <select class="form-control" id="exampleFormControlSelect1" name="location">
-                        <option th:each="location : ${locations}" th:text="${location}" th:value="${location}"></option>
-                    </select>
-                </div>
-
-                <button class="btn btn-success">Sign up</button>
-            </form>-->
 
         </div>
 
